# murkdown

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: main.rs
src/cli/: artifact.rs  command.rs  graph.rs  graph_sorter.rs  logger.rs  mod.rs  op.rs  reader.rs  state.rs  state_context.rs  task.rs  types.rs  utils.rs
src/cli/task/: tests.rs
src/lib/: ast.rs  compiler.rs  lib.rs  parser.rs  parser_grammar.pest  preprocessor.rs  types.rs
src/lib/compiler/: html.lang  lang.rs  markdown.lang  plaintext.lang  rule.rs  rule_argument.rs  rule_grammar.pest
src/ui/: index.html  style.css
tests/: tests.rs
tests/cli/: build-exec-with-ids.toml  build-includes-with-ids.toml  build-includes.toml  build-interactive.toml
tests/cli/build-exec-with-ids.in/: a.md  code.sh
tests/cli/build-includes-with-ids.in/: a.md
tests/cli/build-includes-with-ids.in/b/: b.md
tests/cli/build-includes.in/: a.md
tests/cli/build-includes.in/b/: b.md
tests/cli/build-interactive.in/: file.md
tests/html/: code.toml  composed.toml  example-blog.toml  example-slideshow.toml  images.toml  simple.toml
tests/html/code.in/: file.md
tests/html/code.out/: file.html  file.md  tabbed.html
tests/html/composed.in/: file.md
tests/html/composed.out/: file.html
tests/html/example-blog.in/blog/: blog.md  header.md.part
tests/html/example-blog.in/blog/posts/: first.md  second.md
tests/html/example-blog.out/blog/: blog.html
tests/html/example-blog.out/blog/posts/: first.html  second.html
tests/html/example-slideshow.in/: slideshow.md
tests/html/example-slideshow.out/: slideshow.html
tests/html/images.in/: file.md
tests/html/images.out/: file.html
tests/html/simple.in/: file.md
tests/html/simple.out/: file.html  file.md
tests/markdown/: code.toml  simple.toml
tests/markdown/code.in/: file.md  tabbed.md
tests/markdown/code.out/: file.md  tabbed.md
tests/markdown/composed.out/: file.md
tests/markdown/images.out/: file.md
tests/markdown/simple.in/: file.md
tests/markdown/simple.out/: file.md
