[package]
name = "murkdown"
categories = ["compilers", "parser-implementations", "command-line-utilities", "web-programming", "text-processing"]
description = "An experimental semantic markup language and static site generator for composing and decomposing hypertext documents"
edition = "2021"
keywords = ["markup", "markdown", "hypertext", "generator", "literate-programming"]
license = "AGPL-3.0-only"
repository = "https://github.com/gamgi/murkdown"
version = "0.1.0"

[lib]
name = "murkdown"
path = "src/lib/lib.rs"
doctest = false

[[bin]]
name = "md"
path = "src/main.rs"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.4.15", features = ["derive"] }
derive_builder = "0.20.2"
env_logger = "0.11.3"
futures = "0.3.30"
log = { version = "0.4.21", features = ["kv"] }
pest = "2.7.6"
pest_derive = { version = "2.7.6", features = ["std", "grammar-extras"] }
shlex = "1.2.0"
thiserror = "1.0.63"
thiserror-ext = "0.2.0"
tokio-stream = { version = "0.1.14", features = [ "io-util"] }
tokio = { version = "1.37.0", features = ["fs", "macros", "io-util", "io-std", "rt-multi-thread", "process"] }
walkdir = "2.5.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
